moved plane to fix scrolling issue on mobile

--- a/styles/2020/mobile.css
+++ b/styles/2020/mobile.css
@@ -241,7 +241,7 @@
   } */
   #bottom-plane {
     width: 200px;
-    margin-left: calc(106% - 200px);
+    margin-left: calc(100% - 200px);
   }
   #trees {
     position: absolute;
